# bmad-encar-demo

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  g4_body.json
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
api/app/: auth.py  config.py  embeddings.py  main.py
api/app/db/: readonly.py  sql_guard.py
api/app/graph/: __init__.py  answer_node.py  contextualize_node.py  doc_rag_node.py  graph.py  guard_node.py  listing_cards.py  router_node.py  sql_rag_node.py
api/app/routers/: ai.py
api/app/schemas/: ai.py
api/corpus/: 01-차종별-특성.md  02-패밀리카-적합-차종.md  03-초보운전자-적합-차종.md  04-연료별-유지비-연비.md  05-중고차-신뢰성-체크포인트.md  06-차형-용어-매핑.md  07-전기차-충전-보조금.md  10-사고이력-침수-판별.md  11-주행거리-연식-판단.md  12-옵션-가치-판단.md
api/corpus/_excluded/: 08-할부-리스-현금-비교.md  09-보험-세금-기초.md  README.md
api/docs/: ab-eval-raw-gemini-2.5-flash-lite.json  ab-eval-raw-gemini-3.1-flash-lite.json  ab-eval-report.json  ai-ab-test-queryset.json  ai-ab-test-queryset.md  ai-demo-queries.md  ai-e2e-hard-queryset.json
api/scripts/: apply_listings_expansion.py  backfill_embeddings.py  run_ab_eval.py  score_ab.py
api/tests/: demo_queries.py  test_ab_scoring.py  test_ai_search.py  test_auth.py  test_contextualize_node.py  test_demo_acceptance.py  test_doc_rag_node.py  test_embeddings.py  test_graph.py  test_health.py  test_listing_cards.py  test_live_smoke.py  test_readonly.py  test_router_node.py  test_sql_guard.py  test_sql_rag_node.py  test_storage_signed_url_contract.py
api/tests/integration/: test_fr11_cover_images_real_db.py  test_seller_summary_real_db.py  (+1 more)
(+445 files in other folders)
